edit-dropdown menu

--- a/index.html
+++ b/index.html
@@ -29,6 +29,16 @@
           ><strong>News</strong></a
         >
       </div>
+      <div class="navbar-start navbar-item">
+        <a class="navbar-item has-text-white" href="./game.html"
+          ><strong>Scores</strong></a
+        >
+      </div>
+      <div class="navbar-start navbar-item">
+        <a class="navbar-item has-text-white" href="./team.html"
+          ><strong><Soccer-Ranking></Soccer-Ranking></strong
+        ></a>
+      </div>
 
       <div class="dropdown is-hoverable">
         <div class="dropdown-trigger">
@@ -45,14 +55,7 @@
         </div>
         <div class="dropdown-menu" id="dropdown-menu4" role="menu">
           <div class="dropdown-content">
-            <div class="dropdown-item">
-              <ul>
-                <li><a href="./team.html">Soccer</a></li>
-                <li><a src="./game.html">Score</a></li>
-                <li><a src=""></a></li>
-                <li><a src=""></a></li>
-              </ul>
-            </div>
+            <div class="dropdown-item"></div>
           </div>
         </div>
       </div>
